Update java-basics.md